--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -156,7 +156,7 @@
 .why{
     background-color: #FF9200;
     color: white;
-    padding: 10px 50px;
+    padding: 10px 70px;
     margin: 20px 0;
     display: flex;
     align-items: center;
@@ -167,13 +167,15 @@
     text-align: left;
 }
 .why h1{
-    font-size: 40px;
+    font-size: 30px;
     font-weight: bold;
     margin: 10px 0;
+    line-height: 80px;
 } 
 .why p{
-    font-size: 17px;
+    font-size: 19px;
     margin: 10px 0;
+    line-height: 30px;
 }
 .why img{
     width: 100px;
