--- a/src/styles/contact.css
+++ b/src/styles/contact.css
@@ -134,7 +134,7 @@
 }
 .footer_contact .phone{
     text-decoration: underline;
-}
+} 
 .icon {
     margin-right: 10px; /* Espace entre l'icône et le texte */
 }
@@ -200,7 +200,8 @@
     }
     
     .msg_contact ul li {
-        margin: 0 0 0 100px; 
+        margin: 0 0 0 30px; 
+        max-width: 250px; 
     }
     .footer_contact{
         flex-direction: column; /* Afficher les éléments en colonne */
@@ -209,7 +210,7 @@
         text-align: center; /* Centrer le texte */
         margin: 0; /* Réinitialiser les marges */
         padding: 20px 0; /* Ajouter un peu de padding */
-        gap: 20px;
+        gap: 0px;
     }
     .footer_contact h1{
         font-size: 18px;
